# atmega-tdd-example

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  atmega-tdd-example.code-workspace  avr-atmega168a-toolchain.cmake  build-app.sh  clang-tidy.sh  code-complexity.sh  docker-compose.yml  main.c  main.h  makefile  packages.txt  project.yml  requirements.txt  toolchain.cmake  unit-tests.sh
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/workflows/: build.yml  main.yml  pre-commit.yml  tests.yml
Hardware/: .gitignore
Inc/: led.h  low_power.h  main.h  superloop.h  timer.h
Src/: .clang-tidy  CMakeLists.txt  led.c  low_power.c  main.c  superloop.c  timer.c
Tests/: CMakeLists.txt  mock_led.cpp  mock_low_power.cpp  mock_superloop.cpp  mock_timer.cpp  project.yml  test_led.c  test_led.cpp  test_low_power.c  test_main.c  test_main.cpp  test_superloop.c  test_superloop.cpp  test_timer.c  test_timer.cpp
Tests/support/: testable_mcu_registers.h  testable_micro_registers.h
